--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://portal.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main_menu.tscn", "res://door.tscn", "res://world.tscn", "res://button.tscn", "res://player.tscn")
-current_scene="res://world.tscn"
+open_scenes=PackedStringArray("res://main_menu.tscn", "res://door.tscn", "res://world.tscn", "res://button.tscn", "res://player.tscn", "res://gun.tscn")
+current_scene="res://player.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,7 +43,7 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://button.gd", "res://door.gd", "res://main.gd", "res://portal.gd"]
+open_scripts=["res://button.gd", "res://door.gd", "res://main.gd", "res://player.gd", "res://portal.gd"]
 selected_script="res://portal.gd"
 open_help=[]
 script_split_offset=200
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(138, 61, 1164, 695)
+floating_window_rect=Rect2i(676, 161, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
