--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -19,9 +19,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 54,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 13,
+"h_scroll_position": 0,
 "row": 14,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -48,7 +48,21 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 38,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
