--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main_menu.tscn", "res://door.tscn", "res://world.tscn", "res://button.tscn", "res://player.tscn", "res://gun.tscn")
-current_scene="res://player.tscn"
+current_scene="res://door.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://button.gd", "res://door.gd", "res://main.gd", "res://player.gd", "res://portal.gd"]
-selected_script="res://portal.gd"
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(676, 161, 1164, 695)
+floating_window_rect=Rect2i(378, 155, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
