--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,9 +9,13 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+<<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://")
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
+dock_filesystem_selected_paths=PackedStringArray("res://pause_menu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
-dock_node_current_tab=1
+dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -22,18 +26,15 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
-dock_3="Scene,Import"
-dock_4="FileSystem"
-dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main_menu.tscn", "res://door.tscn", "res://world.tscn", "res://button.tscn", "res://player.tscn", "res://gun.tscn")
-current_scene="res://door.tscn"
-center_split_offset=-257
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+open_scenes=PackedStringArray("res://main_menu.tscn", "res://door.tscn", "res://world.tscn", "res://button.tscn", "res://player.tscn", "res://pause_menu.tscn")
+current_scene="res://pause_menu.tscn"
+center_split_offset=-289
 selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=0
 
 [EditorWindow]
 
@@ -43,16 +44,16 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://button.gd", "res://door.gd", "res://main.gd", "res://player.gd", "res://portal.gd"]
-selected_script="res://player.gd"
+open_scripts=["res://button.gd", "res://door.gd", "res://pause_menu.gd", "res://player.gd", "res://portal.gd"]
+selected_script="res://pause_menu.gd"
 open_help=[]
-script_split_offset=200
+script_split_offset=100
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 155, 1164, 695)
+floating_window_rect=Rect2i(138, 61, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
